@@ -28,6 +28,11 @@ import java.util.stream.Collectors;
 
 @Service
 public class SaleServiceImpl implements SaleService {
+
+    private static final String SALE_NOT_FOUND_MSG = "Sale not found with id: ";
+    private static final String SELLER_NOT_FOUND_MSG = "Seller not found with id: ";
+    private static final String PRODUCT_NOT_FOUND_MSG = "Product not found with id: ";
+
     private final SaleRepository saleRepository;
     private final SellerRepository sellerRepository;
     private final ProductRepository productRepository;
@@ -51,14 +56,10 @@ public class SaleServiceImpl implements SaleService {
         validateRequest(request);
 
         SellerDomain seller = sellerRepository.findById(UUID.fromString(request.getSellerId()))
-                .orElseThrow(() -> new SaleNotFoundException("Seller not found with id: " + request.getSellerId()));
+                .orElseThrow(() -> new SaleNotFoundException(SELLER_NOT_FOUND_MSG + request.getSellerId()));
 
         if (request.getTableId() != null && !request.getTableId().isBlank()) {
-            try {
-                tableService.getTableById(request.getTableId());
-            } catch (Exception e) {
-                throw new SaleNotFoundException("Table not found with id: " + request.getTableId());
-            }
+            validateTableExists(request.getTableId());
         }
 
         SaleDomain sale = new SaleDomain();
@@ -68,11 +69,27 @@ public class SaleServiceImpl implements SaleService {
         sale.setCreatedDate(LocalDateTime.now());
         sale.setModifiedDate(LocalDateTime.now());
 
+        BigDecimal totalAmount = processSaleDetails(sale, request.getDetails());
+
+        sale.setTotalAmount(totalAmount);
+        SaleDomain savedSale = saleRepository.save(sale);
+        return saleMapper.toDto(savedSale);
+    }
+
+    private void validateTableExists(String tableId) {
+        try {
+            tableService.getTableById(tableId);
+        } catch (Exception e) {
+            throw new SaleNotFoundException("Table not found with id: " + tableId);
+        }
+    }
+
+    private BigDecimal processSaleDetails(SaleDomain sale, List<SaleDetailDTO> detailDtos) {
         BigDecimal totalAmount = BigDecimal.ZERO;
 
-        for (SaleDetailDTO detailDto : request.getDetails()) {
+        for (SaleDetailDTO detailDto : detailDtos) {
             Product product = productRepository.findById(detailDto.getProductId())
-                    .orElseThrow(() -> new SaleNotFoundException("Product not found with id: " + detailDto.getProductId()));
+                    .orElseThrow(() -> new SaleNotFoundException(PRODUCT_NOT_FOUND_MSG + detailDto.getProductId()));
 
             SaleDetailDomain detail = new SaleDetailDomain();
             detail.setProduct(product);
@@ -85,16 +102,13 @@ public class SaleServiceImpl implements SaleService {
             sale.addDetail(detail);
             totalAmount = totalAmount.add(subtotal);
         }
-
-        sale.setTotalAmount(totalAmount);
-        SaleDomain savedSale = saleRepository.save(sale);
-        return saleMapper.toDto(savedSale);
+        return totalAmount;
     }
 
     @Override
     public SaleResponseDTO getSaleById(UUID id) {
         SaleDomain sale = saleRepository.findById(id)
-                .orElseThrow(() -> new SaleNotFoundException("Sale not found with id: " + id));
+                .orElseThrow(() -> new SaleNotFoundException(SALE_NOT_FOUND_MSG + id));
         return saleMapper.toDto(sale);
     }
 
@@ -102,14 +116,14 @@ public class SaleServiceImpl implements SaleService {
     public List<SaleResponseDTO> getAllSales() {
         return saleRepository.findAll().stream()
                 .map(saleMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional
     public SaleResponseDTO updateSale(UUID id, SaleRequestDTO request) {
         SaleDomain existingSale = saleRepository.findById(id)
-                .orElseThrow(() -> new SaleNotFoundException("Sale not found with id: " + id));
+                .orElseThrow(() -> new SaleNotFoundException(SALE_NOT_FOUND_MSG + id));
 
         if (existingSale.getStatus() == SaleStatus.COMPLETED) {
             throw new SaleBusinessException("A COMPLETED sale cannot be modified");
@@ -118,14 +132,10 @@ public class SaleServiceImpl implements SaleService {
         validateRequest(request);
 
         SellerDomain seller = sellerRepository.findById(UUID.fromString(request.getSellerId()))
-                .orElseThrow(() -> new SaleNotFoundException("Seller not found with id: " + request.getSellerId()));
+                .orElseThrow(() -> new SaleNotFoundException(SELLER_NOT_FOUND_MSG + request.getSellerId()));
 
         if (request.getTableId() != null && !request.getTableId().isBlank()) {
-            try {
-                tableService.getTableById(request.getTableId());
-            } catch (Exception e) {
-                throw new SaleNotFoundException("Table not found with id: " + request.getTableId());
-            }
+            validateTableExists(request.getTableId());
         }
 
         existingSale.setSeller(seller);
@@ -135,23 +145,7 @@ public class SaleServiceImpl implements SaleService {
         // Clear existing details and add new ones
         existingSale.getDetails().clear();
 
-        BigDecimal totalAmount = BigDecimal.ZERO;
-
-        for (SaleDetailDTO detailDto : request.getDetails()) {
-            Product product = productRepository.findById(detailDto.getProductId())
-                    .orElseThrow(() -> new SaleNotFoundException("Product not found with id: " + detailDto.getProductId()));
-
-            SaleDetailDomain detail = new SaleDetailDomain();
-            detail.setProduct(product);
-            detail.setQuantity(detailDto.getQuantity());
-            detail.setUnitPrice(detailDto.getUnitPrice() != null ? detailDto.getUnitPrice() : product.getSalePrice());
-
-            BigDecimal subtotal = detail.getUnitPrice().multiply(detail.getQuantity());
-            detail.setSubtotal(subtotal);
-
-            existingSale.addDetail(detail);
-            totalAmount = totalAmount.add(subtotal);
-        }
+        BigDecimal totalAmount = processSaleDetails(existingSale, request.getDetails());
 
         existingSale.setTotalAmount(totalAmount);
         SaleDomain updatedSale = saleRepository.save(existingSale);
@@ -162,72 +156,54 @@ public class SaleServiceImpl implements SaleService {
     @Transactional
     public SaleResponseDTO patchSale(UUID id, SalePatchDTO request) {
         SaleDomain existingSale = saleRepository.findById(id)
-                .orElseThrow(() -> new SaleNotFoundException("Sale not found with id: " + id));
+                .orElseThrow(() -> new SaleNotFoundException(SALE_NOT_FOUND_MSG + id));
 
         if (existingSale.getStatus() == SaleStatus.COMPLETED) {
             throw new SaleBusinessException("A COMPLETED sale cannot be modified");
         }
 
-        if (request.status() != null) {
-            existingSale.setStatus(request.status());
-        }
-
-        if (request.sellerId() != null && !request.sellerId().isBlank()) {
-            SellerDomain seller = sellerRepository.findById(UUID.fromString(request.sellerId()))
-                    .orElseThrow(() -> new SaleNotFoundException("Seller not found with id: " + request.sellerId()));
-            existingSale.setSeller(seller);
-        }
-
-        if (request.tableId() != null) {
-            if (!request.tableId().isBlank()) {
-                try {
-                    tableService.getTableById(request.tableId());
-                } catch (Exception e) {
-                    throw new SaleNotFoundException("Table not found with id: " + request.tableId());
-                }
-            }
-            existingSale.setTableId(request.tableId().isBlank() ? null : request.tableId());
-        }
-
-        if (request.details() != null && !request.details().isEmpty()) {
-            existingSale.getDetails().clear();
-            BigDecimal totalAmount = BigDecimal.ZERO;
-
-            for (SaleDetailDTO detailDto : request.details()) {
-                if (detailDto.getProductId() == null) {
-                    throw new SaleValidationException("Product ID is required for all items");
-                }
-                if (detailDto.getQuantity() == null || detailDto.getQuantity().compareTo(BigDecimal.ZERO) <= 0) {
-                    throw new SaleValidationException("Quantity must be greater than zero for all items");
-                }
-
-                Product product = productRepository.findById(detailDto.getProductId())
-                        .orElseThrow(() -> new SaleNotFoundException("Product not found with id: " + detailDto.getProductId()));
-
-                SaleDetailDomain detail = new SaleDetailDomain();
-                detail.setProduct(product);
-                detail.setQuantity(detailDto.getQuantity());
-                detail.setUnitPrice(detailDto.getUnitPrice() != null ? detailDto.getUnitPrice() : product.getSalePrice());
-
-                BigDecimal subtotal = detail.getUnitPrice().multiply(detail.getQuantity());
-                detail.setSubtotal(subtotal);
-
-                existingSale.addDetail(detail);
-                totalAmount = totalAmount.add(subtotal);
-            }
-            existingSale.setTotalAmount(totalAmount);
-        }
+        updateSaleBasicInfo(existingSale, request);
+        updateSaleDetails(existingSale, request.details());
 
         existingSale.setModifiedDate(LocalDateTime.now());
         SaleDomain updatedSale = saleRepository.save(existingSale);
         return saleMapper.toDto(updatedSale);
     }
 
+    private void updateSaleBasicInfo(SaleDomain existingSale, SalePatchDTO request) {
+        if (request.status() != null) {
+            existingSale.setStatus(request.status());
+        }
+
+        if (request.sellerId() != null && !request.sellerId().isBlank()) {
+            SellerDomain seller = sellerRepository.findById(UUID.fromString(request.sellerId()))
+                    .orElseThrow(() -> new SaleNotFoundException(SELLER_NOT_FOUND_MSG + request.sellerId()));
+            existingSale.setSeller(seller);
+        }
+
+        if (request.tableId() != null) {
+            if (!request.tableId().isBlank()) {
+                validateTableExists(request.tableId());
+            }
+            existingSale.setTableId(request.tableId().isBlank() ? null : request.tableId());
+        }
+    }
+
+    private void updateSaleDetails(SaleDomain existingSale, List<SaleDetailDTO> details) {
+        if (details == null || details.isEmpty()) {
+            return;
+        }
+
+        existingSale.getDetails().clear();
+        BigDecimal totalAmount = processSaleDetails(existingSale, details);
+        existingSale.setTotalAmount(totalAmount);
+    }
+
     @Override
     @Transactional
     public void deleteSale(UUID id) {
         if (!saleRepository.existsById(id)) {
-            throw new SaleNotFoundException("Sale not found with id: " + id);
+            throw new SaleNotFoundException(SALE_NOT_FOUND_MSG + id);
         }
         saleRepository.deleteById(id);
 
